# Digital-filters

./: .gitignore  CMakeLists.txt  LICENSE  README.md  filter.h  fir.h  hamming.h  hanning.h  iir.h  main.cpp  test  test.cpp
docs/: Doxyfile  annotated.html  classJK_1_1FIR.html  classJK_1_1FIR__coll__graph.map  classJK_1_1FIR__inherit__graph.md5  classJK_1_1Filter-members.html  classJK_1_1Filter.html  classJK_1_1Filter__inherit__graph.map  classJK_1_1Filter__inherit__graph.md5  classJK_1_1Hamming-members.html  classJK_1_1Hamming__inherit__graph.map  classJK_1_1IIR.html  classJK_1_1IIR__inherit__graph.map  classJK_1_1Window-members.html  classJK_1_1Window.html  classJK_1_1Window__inherit__graph.md5  dir_95abafdd8ad9e2a3d4411c787ef0cdad_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  filter_8hpp.html  filter_8hpp__dep__incl.map  filter_8hpp_source.html  fir_8hpp__incl.map  fir_8hpp__incl.md5  fir_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  hamming_8hpp.html  hamming_8hpp__incl.md5  hamming_8hpp_source.html  hanning_8hpp.html  hanning_8hpp__incl.map  hanning_8hpp_source.html  iir_8hpp__incl.map  iir_8hpp_source.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+12 more)
docs/html/: classJK_1_1FIR-members.html  classJK_1_1FIR.html  classJK_1_1FIR__coll__graph.dot  classJK_1_1FIR__coll__graph.md5  classJK_1_1FIR__inherit__graph.dot  classJK_1_1FIR__inherit__graph.map  classJK_1_1Filter-members.html  classJK_1_1Filter.html  classJK_1_1Filter__coll__graph.dot  classJK_1_1Filter__coll__graph.map  classJK_1_1Filter__coll__graph.md5  classJK_1_1Filter__inherit__graph.dot  classJK_1_1Hamming-members.html  classJK_1_1Hamming.html  classJK_1_1Hamming__coll__graph.md5  classJK_1_1Hamming__inherit__graph.dot  classJK_1_1Hanning-members.html  classJK_1_1Hanning.html  classJK_1_1Hanning__inherit__graph.dot  classJK_1_1Hanning__inherit__graph.map  classJK_1_1Hanning__inherit__graph.md5  classJK_1_1IIR-members.html  classJK_1_1IIR.html  classJK_1_1IIR__coll__graph.dot  classJK_1_1IIR__coll__graph.map  classJK_1_1IIR__coll__graph.md5  classJK_1_1IIR__inherit__graph.dot  classJK_1_1IIR__inherit__graph.md5  classJK_1_1Window-members.html  classJK_1_1Window.html  classJK_1_1Window__inherit__graph.dot  classJK_1_1Window__inherit__graph.map  classes.html  dir_000001_000002.html  dir_000003_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_95abafdd8ad9e2a3d4411c787ef0cdad.html  (+55 more)
docs/latex/: files.tex  (+68 more)
examples/: main.cpp
include/: filter.h  filter.hpp  fir.h  fir.hpp  hamming.h  hamming.hpp  hanning.h  hanning.hpp  iir.h  iir.hpp  plots.h  plots.hpp  window.h  window.hpp
src/: filter.cpp  fir.cpp  hamming.cpp  hanning.cpp  iir.cpp  main.cpp  plots.cpp  window.cpp
(+53 files in other folders)
